--- a/app/src/main/res/layout-land/activity_choice_mode_page.xml
+++ b/app/src/main/res/layout-land/activity_choice_mode_page.xml
@@ -32,10 +32,11 @@
                 android:id="@+id/imageView"
                 android:layout_width="220dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/kobbicon" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -145,11 +146,9 @@
 
             <ImageButton
                 android:id="@+id/btn_User_info_page1"
-                android:layout_width="68dp"
-                android:layout_height="71dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="1dp"
                 android:background="#FFFFFF"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toTopOf="@+id/choice_user_shop_name"
