--- a/app/src/main/res/layout-land/activity_main_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_main_menu_page.xml
@@ -31,6 +31,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.10218978" />
 
+            <!-- 뚜껑 상호명-->
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="0dp"
@@ -44,9 +45,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="1.0" />
 
-            <!-- 뚜껑 상호명-->
             <TextView
                 android:id="@+id/tvcname"
                 android:layout_width="wrap_content"
@@ -65,24 +65,26 @@
                 android:id="@+id/imageView2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
                 android:background="#FEE9E9"
+                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                 app:layout_constraintEnd_toStartOf="@+id/textView5"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
+                app:layout_constraintTop_toTopOf="@+id/textView5"
                 app:srcCompat="@drawable/casher" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="40dp"
                 android:text="어떤 메뉴를 주문할까요?"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -115,7 +117,8 @@
                 android:id="@+id/btn_small_menu_page2"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="45dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="라떼"
@@ -165,7 +168,8 @@
                 android:id="@+id/btn_small_menu_page5"
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginBottom="45dp"
                 android:background="@drawable/btn_radius"
                 android:backgroundTint="#FF5555"
                 android:text="요거트"
@@ -219,22 +223,20 @@
             <!-- 뚜껑 쇼핑카드 -->
             <ImageButton
                 android:id="@+id/btn_cart_page3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="500dp"
-                android:layout_marginTop="11dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="#00FFFFFF"
-                app:layout_constraintBottom_toTopOf="@+id/textView"
-                app:layout_constraintStart_toEndOf="@+id/tvcname"
-                app:layout_constraintTop_toTopOf="@+id/tvcname"
+                app:layout_constraintBottom_toBottomOf="@+id/button7"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/button7"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <Button
                 android:id="@+id/button7"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/button_style"
                 android:backgroundTint="#FBD7D7"
                 android:text="뒤로 가기"
@@ -242,7 +244,7 @@
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
-                app:layout_constraintTop_toTopOf="@+id/btn_cart_page3" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
