--- a/app/src/main/res/layout-land/activity_small_menu_page1_2.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page1_2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#FFFFFF"
-    tools:context=".Customer_main_page">
+    tools:context=".Main_menu_page">
 
     <ScrollView
         android:layout_width="0dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-
+        <!-- 뚜껑 시작 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,20 +30,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.10218978" />
-
-            <Button
-                android:id="@+id/btn_card"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/button_style"
-                android:backgroundTint="#FF5555"
-                android:text="모드 전환"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView"
@@ -74,73 +60,44 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="6dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView6"
                 app:layout_constraintEnd_toStartOf="@+id/textView6"
                 app:layout_constraintTop_toTopOf="@+id/textView5"
-                app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/casher" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="안녕하세요:)"
+                android:layout_height="67dp"
+                android:layout_marginStart="10dp"
+                android:text="커피류를 선택하셨습니다."
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView6"
                 app:layout_constraintEnd_toEndOf="@+id/textView6"
-                app:layout_constraintStart_toStartOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:layout_constraintVertical_bias="0.509" />
+                app:layout_constraintStart_toStartOf="@+id/textView6"
+                app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="67dp"
                 android:layout_marginStart="140dp"
                 android:layout_marginTop="90dp"
-                android:text="매장에서 드시나요? 아니면 포장해드릴까요?"
+                android:text="어떤 커피로 드시겠어요?"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline" />
-
-            <ImageButton
-                android:id="@+id/btn_Eat_main_menu_page"
-                android:layout_width="400dp"
-                android:layout_height="400dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/eat2"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline8"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-            <ImageButton
-                android:id="@+id/btn_TakeOut_main_menu_page"
-                android:layout_width="400dp"
-                android:layout_height="400dp"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/takeout2"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guideline8"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                app:layout_constraintTop_toBottomOf="@+id/tvcname" />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -151,6 +108,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:srcCompat="@drawable/kobbtext" />
+
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline8"
@@ -165,6 +123,98 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_begin="736dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="222dp" />
+
+            <ImageButton
+                android:id="@+id/btn_cart_page3"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="16dp"
+                android:backgroundTint="#00FFFFFF"
+                app:layout_constraintBottom_toBottomOf="@+id/button7"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/button7"
+                app:srcCompat="@drawable/shoppingcart" />
+
+            <!-- 뚜껑 끝 -->
+
+            <Button
+                android:id="@+id/btn_Hot_cold_page1"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="50dp"
+                android:backgroundTint="#FFFFFF"
+                android:drawableTop="@drawable/coffee_03_small_menu"
+                android:gravity="center"
+                android:text="에스프레소     4,000원"
+                android:textColor="#000000"
+                android:textSize="50dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
+                app:layout_constraintEnd_toStartOf="@+id/guideline8"
+                app:layout_constraintTop_toTopOf="@+id/guideline10" />
+
+            <Button
+                android:id="@+id/btn_Hot_cold_page2"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
+                android:layout_marginStart="50dp"
+                android:backgroundTint="#FFFFFF"
+                android:drawableTop="@drawable/coffee_04_small_menu"
+                android:gravity="center"
+                android:text="카푸치노        4,000원"
+                android:textColor="#000000"
+                android:textSize="50dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Hot_cold_page1"
+                app:layout_constraintStart_toStartOf="@+id/guideline8"
+                app:layout_constraintTop_toTopOf="@+id/btn_Hot_cold_page1"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/btn_Customer_main_page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#FF5555"
+                android:text="◀ 이전 페이지"
+                android:textColor="#FFFFFF"
+                android:textSize="32dp"
+                app:layout_constraintEnd_toEndOf="@+id/btn_Hot_cold_page1"
+                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page1" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#FF5555"
+                android:text="다음 페이지 ▶"
+                android:textColor="#FFFFFF"
+                android:textSize="32dp"
+                app:layout_constraintStart_toStartOf="@+id/btn_Hot_cold_page2"
+                app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page2" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/button_style"
+                android:backgroundTint="#FBD7D7"
+                android:text="뒤로 가기"
+                android:textColor="#504E4E"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
+                app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
+                app:layout_constraintTop_toTopOf="@+id/tvcname" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
