--- a/app/src/main/res/layout-land/activity_check_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_check_menu_page.xml
@@ -47,31 +47,6 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/ch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:text="차가운"
-                android:textColor="#504E4E"
-                android:textSize="46sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="@+id/guideline" />
-
-            <TextView
-                android:id="@+id/textView67"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="아메리카노"
-                android:textColor="#504E4E"
-                android:textSize="46sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/ch"
-                app:layout_constraintStart_toEndOf="@+id/ch"
-                app:layout_constraintTop_toTopOf="@+id/ch" />
-
-            <TextView
                 android:id="@+id/tvcname"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -85,27 +60,65 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="300dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline10"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView6"
+                app:layout_constraintEnd_toStartOf="@+id/textView6"
+                app:layout_constraintTop_toTopOf="@+id/textView48"
                 app:srcCompat="@drawable/casher" />
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="67dp"
+                android:text="아메리카노"
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintEnd_toStartOf="@+id/textView52"
+                app:layout_constraintStart_toEndOf="@+id/textView48" />
+
+            <TextView
+                android:id="@+id/textView52"
+                android:layout_width="wrap_content"
+                android:layout_height="67dp"
+                android:layout_marginEnd="150dp"
+                android:text="선택하셨습니다."
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView5" />
+
+            <TextView
+                android:id="@+id/textView48"
+                android:layout_width="wrap_content"
+                android:layout_height="67dp"
+                android:text="차가운"
+                android:textColor="#504E4E"
+                android:textSize="46sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView6"
+                app:layout_constraintTop_toTopOf="@+id/textView5" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="67dp"
+                android:layout_marginTop="90dp"
                 android:text="장바구니에 담을까요?"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.519"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ch" />
+                app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -119,6 +132,13 @@
 
 
             <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -130,18 +150,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_begin="175dp" />
+                app:layout_constraintGuide_begin="222dp" />
 
             <ImageButton
                 android:id="@+id/btn_cart_page3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="500dp"
-                android:layout_marginTop="11dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="#00FFFFFF"
-                app:layout_constraintBottom_toTopOf="@+id/textView"
-                app:layout_constraintStart_toEndOf="@+id/tvcname"
-                app:layout_constraintTop_toTopOf="@+id/tvcname"
+                app:layout_constraintBottom_toBottomOf="@+id/button7"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/button7"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <!-- 뚜껑 끝 -->
@@ -150,105 +169,191 @@
                 android:id="@+id/button7"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/button_style"
                 android:backgroundTint="#FBD7D7"
                 android:text="뒤로 가기"
                 android:textColor="#504E4E"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_cart_page3"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
-                app:layout_constraintTop_toTopOf="@+id/btn_cart_page3" />
+                app:layout_constraintTop_toTopOf="@+id/tvcname" />
+
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
-                android:layout_height="440dp"
+                android:layout_height="450dp"
                 android:background="#FF5555"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.66" />
+
+            <TextView
+                android:id="@+id/textView68"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="금액   : "
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView70"
+                app:layout_constraintTop_toBottomOf="@+id/textView70" />
+
+            <TextView
+                android:id="@+id/textView75"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="차갑게"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView78"
+                app:layout_constraintTop_toTopOf="@+id/textView67" />
+
+            <TextView
+                android:id="@+id/textView76"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="9,000원"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView77"
+                app:layout_constraintTop_toTopOf="@+id/textView68" />
+
+            <TextView
+                android:id="@+id/textView77"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1잔"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView75"
+                app:layout_constraintTop_toTopOf="@+id/textView70" />
+
+            <TextView
+                android:id="@+id/textView78"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="아메리카노"
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/textView59"
+                app:layout_constraintTop_toTopOf="@+id/textView59" />
+
+            <TextView
+                android:id="@+id/textView70"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="수량   : "
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView67"
+                app:layout_constraintTop_toBottomOf="@+id/textView67" />
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="602dp"
-                android:layout_height="392dp"
-                android:layout_marginStart="16dp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="@+id/textView"
-                app:layout_constraintTop_toTopOf="@+id/textView4"
-                app:srcCompat="@drawable/coffee1" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="240dp"
-                android:text="메뉴 : 아메리카노"
-                android:textColor="#FFFFFF"
-                android:textSize="50sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView16"
-                app:layout_constraintTop_toTopOf="@+id/textView4"
-                app:layout_constraintVertical_bias="0.496" />
-
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="상태 : 차갑게"
-                android:textColor="#FFFFFF"
-                android:textSize="50dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView7"
-                app:layout_constraintStart_toStartOf="@+id/textView7"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="수량 : "
-                android:textColor="#FFFFFF"
-                android:textSize="50dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView18"
-                app:layout_constraintStart_toStartOf="@+id/textView18"
-                app:layout_constraintTop_toBottomOf="@+id/textView18" />
-
-            <TextView
-                android:id="@+id/textView48"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="금액 : "
-                android:textColor="#FFFFFF"
-                android:textSize="50dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView19"
-                app:layout_constraintStart_toStartOf="@+id/textView19"
-                app:layout_constraintTop_toBottomOf="@+id/textView19" />
+                android:layout_width="570dp"
+                android:layout_height="480dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline14"
+                app:layout_constraintEnd_toStartOf="@+id/guideline8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline10"
+                app:srcCompat="@drawable/coffee_01" />
 
             <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="장바구니 확인"
-                tools:layout_editor_absoluteX="687dp"
-                tools:layout_editor_absoluteY="543dp" />
+                android:id="@+id/button3"
+                android:layout_width="270dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginBottom="10dp"
+                android:backgroundTint="#FFFFFF"
+                android:text="장바구니  담기"
+                android:textColor="#504E4E"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/guideline8" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="270dp"
+                android:layout_height="200dp"
+                android:layout_marginStart="30dp"
+                android:backgroundTint="#FFFFFF"
+                android:text="장바구니  확인"
+                android:textColor="#504E4E"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/button3"
+                app:layout_constraintStart_toEndOf="@+id/button3" />
 
             <TextView
-                android:id="@+id/textView49"
+                android:id="@+id/textView59"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="를 선택하셨습니다"
-                android:textColor="#504E4E"
-                android:textSize="46sp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:text="메뉴   : "
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView6"
-                app:layout_constraintStart_toEndOf="@+id/textView67"
-                app:layout_constraintTop_toTopOf="@+id/textView67" />
+                app:layout_constraintStart_toStartOf="@+id/guideline8"
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+            <TextView
+                android:id="@+id/textView67"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="상태   : "
+                android:textColor="#FFFFFF"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView59"
+                app:layout_constraintTop_toBottomOf="@+id/textView59" />
+
+            <Button
+                android:id="@+id/minbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="128dp"
+                android:text="-"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView77"
+                app:layout_constraintStart_toEndOf="@+id/textView77"
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+            <Button
+                android:id="@+id/plusbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="+"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/result"
+                app:layout_constraintTop_toTopOf="@+id/result" />
+
+            <TextView
+                android:id="@+id/result"
+                android:layout_width="70dp"
+                android:layout_height="50dp"
+                android:background="#FFFFFF"
+                android:gravity="center"
+                android:text="0"
+                android:textSize="30sp"
+                app:layout_constraintStart_toEndOf="@+id/minbutton"
+                app:layout_constraintTop_toTopOf="@+id/minbutton" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
